--- a/network/templates/network/following_content.html
+++ b/network/templates/network/following_content.html
@@ -1,13 +1,10 @@
-{% extends "network/layout.html" %}
+{% extends "network/content_only.html" %}
 {% load humanize %}
 
-{% block title %}Following Feed{% endblock %}
-
-{% block body %}
+{% block content %}
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2>Following Feed</h2>
-        {# Filter buttons will now be included inside the post-feed-area below #}
     </div>
     
     <hr class="mb-4">
