--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load django_htmx %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,39 +9,82 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="{% static 'network/styles.css' %}" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script type="module" src="{% static 'network/index.js' %}"></script>
+        {% htmx_script %}
+        
+        <style>
+            /* HTMX indicator styles */
+            .htmx-indicator {
+                display: none;
+            }
+            .htmx-request .htmx-indicator, .htmx-request.htmx-indicator {
+                display: inline;
+            }
+            .htmx-request.btn .htmx-indicator {
+                display: inline-block;
+            }
+        </style>
     </head>
-    <body>
+    <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-body-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/">
                     <img src="{{ MEDIA_URL}}hum.svg" alt="a bird logo" id="logo"/>
                     Hum Network</a>
                 <div>
                 <ul class="navbar-nav mr-auto">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profile' user.id %}"><strong>{{ user.username }}</strong></a>
+                            <a class="nav-link"
+                               href="{% url 'profile' user.id %}"
+                               hx-get="{% url 'profile' user.id %}?htmx=true"
+                               hx-target="#main-content"
+                               hx-push-url="true"
+                               hx-swap="innerHTML show:window:top">
+                                <strong>{{ user.username }}</strong>
+                            </a>
                         </li>
                     {% endif %}
                     <li class="nav-item">
-                    <a class="nav-link" href="{% url 'index' %}">All Posts</a>
+                        <a class="nav-link" 
+                           href="{% url 'index' %}"
+                           hx-get="{% url 'index' %}?htmx=true"
+                           hx-target="#main-content"
+                           hx-push-url="true"
+                           hx-swap="innerHTML show:window:top">All Posts</a>
                     </li>
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'following' %}">Following</a>
+                            <a class="nav-link" 
+                               href="{% url 'following' %}"
+                               hx-get="{% url 'following' %}?htmx=true"
+                               hx-target="#main-content"
+                               hx-push-url="true" 
+                               hx-swap="innerHTML show:window:top">Following</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                            <a class="nav-link" 
+                               href="{% url 'login' %}"
+                               hx-get="{% url 'login' %}?htmx=true"
+                               hx-target="#main-content"
+                               hx-push-url="true"
+                               hx-swap="innerHTML show:window:top">Log In</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'register' %}">Register</a>
+                            <a class="nav-link" 
+                               href="{% url 'register' %}"
+                               hx-get="{% url 'register' %}?htmx=true"
+                               hx-target="#main-content"
+                               hx-push-url="true"
+                               hx-swap="innerHTML show:window:top">Register</a>
                         </li>
                     {% endif %}
                 </ul>
@@ -48,9 +92,22 @@
              </div>
           </nav>
         
-        <div class="body">
-            {% block body %}
+        <div id="main-content">
+            {% block content %}
+                {% block body %}
+                {% endblock %}
             {% endblock %}
         </div>
+        
+        <script>
+            // Listen for custom events from Django-HTMX
+            document.body.addEventListener('htmx:beforeSwap', function(event) {
+                // You can add custom behavior before swapping content
+                // For example, scroll to top on navigation
+                if (event.detail.target.id === 'main-content') {
+                    window.scrollTo(0, 0);
+                }
+            });
+        </script>
     </body>
 </html>
