--- a/network/templates/network/login_content.html
+++ b/network/templates/network/login_content.html
@@ -1,6 +1,4 @@
-{% extends "network/layout.html" %}
-
-{% block title %}Login{% endblock %}
+{% extends "network/content_only.html" %}
 
 {% block content %}
 <div class="container mt-4">
@@ -22,7 +20,11 @@
     </form>
 
     <div class="mt-3">
-        Don't have an account? <a href="{% url 'register' %}">Register here</a>.
+        Don't have an account? <a href="{% url 'register' %}" 
+                                  hx-get="{% url 'register' %}?htmx=true"
+                                  hx-target="#main-content"
+                                  hx-push-url="true"
+                                  hx-swap="innerHTML show:window:top">Register here</a>.
     </div>
 </div>
-{% endblock %}
+{% endblock %} 
