--- a/network/templates/network/register_content.html
+++ b/network/templates/network/register_content.html
@@ -1,6 +1,4 @@
-{% extends "network/layout.html" %}
-
-{% block title %}Register{% endblock %}
+{% extends "network/content_only.html" %}
 
 {% block content %}
 <div class="container mt-4">
@@ -28,7 +26,11 @@
     </form>
 
     <div class="mt-3">
-        Already have an account? <a href="{% url 'login' %}">Log In here</a>.
+        Already have an account? <a href="{% url 'login' %}"
+                                   hx-get="{% url 'login' %}?htmx=true"
+                                   hx-target="#main-content"
+                                   hx-push-url="true"
+                                   hx-swap="innerHTML show:window:top">Log In here</a>.
     </div>
 </div>
-{% endblock %}
+{% endblock %} 
