--- a/network/templates/network/_filter_buttons.html
+++ b/network/templates/network/_filter_buttons.html
@@ -5,6 +5,7 @@
        class="btn like-btn {% if current_page == 'all_posts' %}text-primary fw-bold{% else %}text-muted{% endif %}" 
        hx-get="{% url 'index' %}?htmx=true" 
        hx-target="#post-feed-area"
+       hx-select="#post-feed-area"
        hx-swap="innerHTML"
        hx-push-url="{% url 'index' %}">All Posts</a>
     
@@ -12,7 +13,8 @@
     <a href="{% url 'following' %}" 
        class="btn like-btn ms-2 {% if current_page == 'following' %}text-primary fw-bold{% else %}text-muted{% endif %}" 
        hx-get="{% url 'following' %}?htmx=true" 
-       hx-target="#post-feed-area"
+       hx-target="#post-feed-area"      
+       hx-select="#main-content"
        hx-swap="innerHTML"
        hx-push-url="{% url 'following' %}">Following</a>
     {% endif %}
