--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -12,11 +12,13 @@
 
     <form action="{% url 'login' %}" method="post" class="mt-3">
         {% csrf_token %}
-        <div class="mb-3">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+        <div class="form-group mb-3">
+            <label for="username" class="mb-2">Username</label>
+            <input autofocus class="form-control" type="text" name="username" placeholder="Username" id="username">
         </div>
-        <div class="mb-3">
-            <input class="form-control" type="password" name="password" placeholder="Password">
+        <div class="form-group mb-3">
+            <label for="password" class="mb-2">Passsword</label>
+            <input class="form-control" type="password" name="password" placeholder="Password" id="password">
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
