--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -62,6 +62,28 @@
                         </a>
                     </li>
                     {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" 
+                           href="{% url 'conversation_list' %}"
+                           hx-get="{% url 'conversation_list' %}?htmx=true"
+                           hx-target="#main-content"
+                           hx-push-url="true"
+                           hx-swap="innerHTML show:window:top"
+                           hx-select="#main-content">
+                           Messages
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" 
+                           href="{% url 'user_list' %}"
+                           hx-get="{% url 'user_list' %}?htmx=true"
+                           hx-target="#main-content"
+                           hx-push-url="true"
+                           hx-swap="innerHTML show:window:top"
+                           hx-select="#main-content">
+                           Explore Users
+                        </a>
+                    </li>
                         <li class="nav-item">
                             <a class="nav-link" 
                                href="{% url 'following' %}"
@@ -71,17 +93,6 @@
                                hx-swap="innerHTML show:window:top"
                                hx-select="#main-content">
                                Following
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" 
-                               href="{% url 'conversation_list' %}"
-                               hx-get="{% url 'conversation_list' %}?htmx=true"
-                               hx-target="#main-content"
-                               hx-push-url="true"
-                               hx-swap="innerHTML show:window:top"
-                               hx-select="#main-content">
-                               Messages
                             </a>
                         </li>
                         <li class="nav-item">
